--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -27,9 +27,9 @@
         {% endif %}
 
         {% if site.github.is_user_page %}
-        <p class="view"><a href="{{ site.github.owner_url }}">GitHub</a></p>
-        <p class="view"><a href="https://www.linkedin.com/in/dustin-marshall-b1151184/">LinkedIn</a></p>
-        <p class="view"><a href="https://docs.google.com/document/d/e/2PACX-1vRgJes1ArPEU52zTHajIRe5cWUQSuusC1nu1ODFHR0dAwGOjTlr2XB2GT0UnBxs2PHKl8QIubnKvlrm/pub">Resume</a></p>
+        <p class="view"><a href="{{ site.github.owner_url }}">GitHub</a>
+          <a href="https://www.linkedin.com/in/dustin-marshall-b1151184/">LinkedIn</a>
+          <a href="https://docs.google.com/document/d/e/2PACX-1vRgJes1ArPEU52zTHajIRe5cWUQSuusC1nu1ODFHR0dAwGOjTlr2XB2GT0UnBxs2PHKl8QIubnKvlrm/pub">Resume</a></p>
         {% endif %}
 
         {% if site.show_downloads %}
