--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -30,7 +30,7 @@
         For more infomation, take a look at my:
         <p class="view"><a href="{{ site.github.owner_url }}">GitHub</a>
           | <a href="https://www.linkedin.com/in/dustin-marshall-b1151184/">LinkedIn</a>
-          | <a href="https://docs.google.com/document/d/e/2PACX-1vRgJes1ArPEU52zTHajIRe5cWUQSuusC1nu1ODFHR0dAwGOjTlr2XB2GT0UnBxs2PHKl8QIubnKvlrm/pub">Resume</a></p>
+          | <a href="https://drive.google.com/file/d/1xmrhkXfAMfaeQYgeRpuwNXuNhaZeKYXE/view?usp=sharing">Resume</a></p>
         {% endif %}
 
         {% if site.show_downloads %}
